nsByUrl avoid repetition, proper schemaLocation handling